<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="60sp"
        android:layout_height="50sp"
        android:layout_marginTop="5sp"
        android:src="@drawable/buttom_back" />

    <ImageView
        android:layout_width="80sp"
        android:layout_marginTop="-30sp"
        android:layout_height="80sp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="55dp"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="2sp"
        android:background="@android:color/white"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/or"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:background="#39428F"
        android:text="@string/login_with_facebook"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#46D0FE"
        android:text="@string/login_with_twitter"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/need_an_account"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:background="#FE3233"
        android:text="@string/sign_up_now"
        android:textColor="#F5FBF8"
        android:textSize="20sp" />


</LinearLayout>